<resources>
    <string name="app_name">GitHub</string>
    <string name="logout">Log Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="public_repos">Public Repos</string>
    <string name="private_repos">Private Repos</string>
    <string name="send_email">Contact by email</string>
    <string name="public_">Public</string>
    <string name="repo_name_owner">%1$s (%2$s)</string>
    <string name="view_repos">View Repositories</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message_logout">Are you sure you want to log out?</string>
    <string name="affiliation">Affiliation</string>
    <string name="summary_affiliation">Affiliation option for fetching repositories</string>
    <string name="sort">Sort</string>
    <string name="summary_sort">Sort criteria for repositories</string>
    <string name="clear_repositories">Clear repositories</string>
</resources>
