<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="ro.softvision.androidworkshop.LoginActivity">

    <!--
    We want the Octocat to take up one third of the screen. Therefore we can take advantage of
    LinearLayout's weight options.
    The Octocat needs to have 1/3 of the total weight sum, we only need some spacer to push it
    towards the middle.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--
        The View class is a great tool to create invisible spaces as it renders nothing on the screen.
        -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <!--
        adjustViewBounds helps us by making the ImageView have the same aspect ratio as the image source.
        -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/octocat"
            android:adjustViewBounds="true"/>

    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/username"
        android:background="@android:color/transparent"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/password"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/login"
        android:background="@color/octoBlue"/>

</LinearLayout>
